Finished base draft and data display, added mock data to authors.txt, books.txt and category.txt